<resources>
    <string name="app_name">Namma Apartments Society Services</string>
    <string name="back_button_description">Back button to navigate previous activity</string>
    <string name="todo_button_description">TODO Button which describes pending lists.</string>
    <string name="history_button_description">History button to view past data</string>
    <string name="menu_icon_description">Menu Icon which will display menu items</string>
    <string name="cancel">Cancel</string>
    <string name="available">AVAILABLE</string>
    <string name="unavailable">UNAVAILABLE</string>
    <string name="awaiting_customer_requirement">Awaiting User Request</string>
    <string name="resident_name">Name:</string>
    <string name="apartment">Apartment:</string>
    <string name="flat">Flat:</string>
    <string name="time_slot">Time Slot:</string>
    <string name="service_type">Service Type:</string>
    <string name="problem_description">Problem:</string>
    <string name="booked_time">Booked Time:</string>
    <string name="call_resident">Call Resident</string>
    <string name="end_service">End Service</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="serving">Serving Request</string>
    <string name="future">Future Requests</string>
    <string name="history">History</string>
    <string name="default_notification_channel_id">02</string>
    <string name="feature_unavailable_image_desc">Image to indicate feature is currently unavailable</string>
    <string name="image_society_service_action_taken_on_notification">Image to indicate whether Society Service has Accepted or Rejected notification that they received</string>
    <string name="going_off_duty_title">Do you want to go OFF DUTY ? </string>
    <string name="going_off_duty_message">If you go off duty, you will not receive any more requests.</string>
    <string name="stay_on_duty">STAY ON DUTY</string>
    <string name="go_off_duty">GO OFF DUTY</string>
    <string name="my_profile">My Profile</string>
    <string name="unavailable_layout_message">You are currently unavailable. Move the switch towards right to go on duty.</string>
    <string name="location_error_title">"Location Error Message"</string>
    <string name="location_error_message">It\'s mandatory to enable your \'Location\' to use this app. Press \'OK\' to go to the Location permission screen.</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="enter_verification_code_to_end_service">A 6 digit OTP has been sent to the Flat Owner Mobile Number. Please enter the OTP to end the Service.</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="enter_verification_code">We need to verify your account. Please enter the 6-digit verification
    code sent to your mobile number.</string>
    <string name="your_mobile_number">your mobile number</string>
    <string name="enter_verification_code_for_registration">A 6-digit OTP has been sent to Society Service Mobile Number.
        Please enter the OTP to create an Account.</string>
    <string name="society_service_mobile_number">Society Service Mobile Number</string>
    <string name="login">LOGIN</string>
    <string name="_91">+91</string>
    <string name="phone_number">Mobile Number</string>
    <string name="logout">Logout</string>
    <string name="register">REGISTER</string>
    <string name="category">Categories</string>
    <string name="name">Name:</string>
    <string name="mobile_number">Mobile Number:</string>
    <string name="plumber">Plumber</string>
    <string name="carpenter">Carpenter</string>
    <string name="electrician">Electrician</string>
    <string name="garbage_management">Garbage Collector</string>
    <string name="guard">Guard</string>
    <string name="adding_society_service_data">Adding Society Service Data</string>
    <string name="please_wait_a_moment">Please wait a moment</string>
    <string name="society_service_added_title">Society Service Added</string>
    <string name="society_service_added_message">Society Service Registration is completed.</string>
    <string name="security_guard_added_title">Security Guard Added</string>
    <string name="security_guard_added_message">Security Guard Registration is completed.</string>
    <string name="register_type_description">Image of Register Type</string>
    <string name="admin">Admin:</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="gate_number">Gate Number:</string>
    <string name="auto_verification_completed">AutoVerification completed. Please wait while we check your Account in our system. . .</string>
    <string name="check_network_connection">Please check your Network Connection</string>
    <string name="wrong_otp_entered">Wrong OTP has been entered</string>
    <string name="waiting_for_otp">Waiting for OTP. . .</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="verifying_account">Verifying Account</string>
    <string name="login_error_message">Login Error Message</string>
    <string name="mobile_number_found">Mobile Number not found. Contact \'Admin\' to add your Mobile Number.</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="image_success">Image to indicate society service has successfully completed service.</string>
    <string name="successfully_completed_service">You have Successfully Completed Service</string>
    <string name="ok">OK</string>
    <string name="history_detail_message">Past Service Details will be shown here</string>
    <string name="future_detail_message">Future Service Details will be shown here</string>
    <string name="monthly">MONTHLY</string>
    <string name="till_date">TILL DATE</string>
    <string name="total">Total</string>
    <string name="rating">Rating:</string>
    <string name="society_service_no_count">-</string>
    <string name="society_admin">ADMIN</string>
    <string name="manage_users">Manage Users</string>
    <string name="register_society_service">Add Staffs</string>
    <string name="staff">Manage Staffs</string>
    <string name="booked_events">Booked Events</string>
    <string name="add_notice">Add Notice</string>
    <string name="notice_board">Notice Board</string>
    <string name="notice_unavailable">Currently there is no notice for your Society.</string>
    <string name="help_desk">Help Desk</string>
    <string name="image_society_admin_service_desc">Image Services that Society Admin will do</string>
    <string name="pending_user_list">Unapproved Users</string>
    <string name="scrap_collections">Scrap Collections</string>
    <string name="food_collections">Food Collections</string>
    <string-array name="society_admin_services">
        <item>@string/manage_users</item>
        <item>@string/register_society_service</item>
        <item>@string/staff</item>
        <item>@string/booked_events</item>
        <item>@string/add_notice</item>
        <item>@string/help_desk</item>
        <item>@string/food_collections</item>
        <item>@string/scrap_collections</item>
    </string-array>
    <string name="approved_users">APPROVED</string>
    <string name="unapproved_users">UNAPPROVED</string>
    <string name="removed_users">REMOVED</string>
    <string name="mobile">Mobile:</string>
    <string name="created_on">Created on:</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="e_mail">E-Mail</string>
    <string name="dues">Dues</string>
    <string name="approve">Approve</string>
    <string name="decline">Decline</string>
    <string name="approve_user_title">Approve User Message</string>
    <string name="approve_user_message">User has been Approved.</string>
    <string name="decline_user_title">Decline User Message</string>
    <string name="decline_user_message">User has been Declined.</string>
    <string name="unapproved_users_unavailable">Currently there are no Unapproved Users in your society</string>
    <string name="maintenanceCostDescription">Please enter Maintenance Cost for this User\'s flat</string>
    <string name="add">Add</string>
    <string name="indian_rupee_symbol">\u20B9</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="designation">Society Manager</string>
    <string name="notice_board_success">You have successfully added your notice.</string>
    <string name="notice_board_dialog_title">Notice Message</string>
    <string name="event_title">Event Title:</string>
    <string name="event_date">Event Date:</string>
    <string name="event_slot">Event Slot:</string>
    <string name="booked_slots">Booked Slots:</string>
    <string name="time_slot_one">8AM - 9AM</string>
    <string name="time_slot_two">9AM - 10AM</string>
    <string name="time_slot_three">10AM - 11AM</string>
    <string name="time_slot_four">11AM - 12PM</string>
    <string name="time_slot_five">12PM - 1PM</string>
    <string name="time_slot_six">1PM - 2PM</string>
    <string name="time_slot_seven">2PM - 3PM</string>
    <string name="time_slot_eight">3PM - 4PM</string>
    <string name="time_slot_nine">4PM - 5PM</string>
    <string name="time_slot_ten">5PM - 6PM</string>
    <string name="time_slot_eleven">6PM - 7PM</string>
    <string name="time_slot_twelve">7PM - 8PM</string>
    <string name="time_slot_thirteen">8PM - 9PM</string>
    <string name="time_slot_fourteen">9PM - 10PM</string>
    <string name="full_day">Full Day(8AM - 10PM)</string>
    <string name="unapproved_events_unavailable">Currently there are no Booked Events in your society</string>
    <string name="staff_categories">Staff Categories</string>
    <string name="plumbers">Plumbers</string>
    <string name="carpenters">Carpenters</string>
    <string name="electricians">Electricians</string>
    <string name="garbageCollectors">Garbage Collectors</string>
    <string name="guards">Guards</string>
    <string name="helpdesk_unavailable">Currently there is no issue raised by the Residents of the Society</string>
    <string name="raised_by">Raised By:</string>
    <string name="help_service_category">Category:</string>
    <string name="help_service_type">Type:</string>
    <string name="help_description">Description:</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="food_type">Food Type:</string>
    <string name="quantity">Quantity:</string>
    <string name="food_collection_unavailable">There has not been any Food Donation request raised at your Society yet.</string>
    <string name="status">Status:</string>
    <string name="update_status">Update Status</string>
    <string name="status_updated">Status Updated</string>
    <string name="user_notified_food_donation">Thanks for collecting Food. User has been Notified.</string>
    <string name="done">Done</string>
    <string name="edit_staff">Edit Staff</string>
    <string name="camera">Camera</string>
    <string name="update_message">Update Message</string>
    <string name="updating_profile">Updating Profile</string>
    <string name="update_profile_photo">Updating Photo</string>
    <string name="scrap_collection_unavailable">There has not been any Scrap Collection request raised at your Society yet.</string>
    <string name="scrap_type">Scrap Type:</string>
    <string name="user_notified_scrap_collection">Thanks for collecting Scrap. User has been Notified.</string>
    <string name="mobile_number_validation">Please enter mobile number</string>
    <string name="name_validation">Please enter name</string>
    <string name="accept_alphabets">Accepts alphabets only</string>
    <string name="upload_image">Please upload image</string>
    <string name="mobile_number_exists">Mobile number already exists</string>
    <string name="gate_number_validation">Please enter gate number</string>
</resources>