<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".admin.registersocietyservices.activities.Register">

    <include layout="@layout/activity_base" />


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profilePic"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:src="@drawable/add_member"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textErrorProfilePic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/upload_image"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/name"
        android:textColor="@color/nmBlack"
        android:textSize="@dimen/text_view_default_size" />

    <EditText
        android:id="@+id/editFullName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textCapWords"
        android:textColor="@color/nmBlack"
        android:textSize="@dimen/edit_text_default_size"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/mobile_number"
        android:textColor="@color/nmBlack"
        android:textSize="@dimen/text_view_default_size" />

    <LinearLayout
        android:id="@+id/layoutMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textCountryCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:text="@string/_91"
            android:textColor="@color/nmBlack"
            android:textSize="@dimen/text_view_default_size" />

        <EditText
            android:id="@+id/editMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:inputType="phone"
            android:maxLength="10"
            android:textColor="@color/nmBlack"
            android:textSize="20sp"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutYesNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:visibility="gone"
        android:weightSum="3">

        <TextView
            android:id="@+id/textAdmin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/admin"
            android:textColor="@color/nmBlack"
            android:textSize="@dimen/text_view_default_size" />

        <Button
            android:id="@+id/buttonNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_selected"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/buttonYes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_not_selected"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textSize="16sp" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/nmBlack"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@color/nmLightYellow"
        android:textSize="@dimen/button_default_size" />

</LinearLayout>