<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageActionTaken"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:contentDescription="@string/image_society_service_action_taken_on_notification"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textResidentName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/resident_name"
                        android:textColor="@color/nmBlack"
                        android:textSize="18sp" />


                    <TextView
                        android:id="@+id/textApartment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/apartment"
                        android:textColor="@color/nmBlack"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textFlatNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/flat"
                        android:textColor="@color/nmBlack"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textServiceType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/service_type"
                        android:textColor="@color/nmBlack"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textTimeSlot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/time_slot"
                        android:textColor="@color/nmBlack"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textProblemDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:text="@string/problem_description"
                        android:textColor="@color/nmBlack"
                        android:textSize="18sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textResidentNameValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:padding="2dp"
                        android:textColor="@color/nmBlack"
                        android:textSize="18sp" />


                    <TextView
                        android:id="@+id/textApartmentValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:padding="2dp"
                        android:textColor="@color/nmBlack"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textFlatNumberValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:textColor="@color/nmBlack"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textServiceTypeValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:textColor="@color/nmBlack"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textTimeSlotValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:textColor="@color/nmBlack"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/textProblemDescriptionValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="2dp"
                        android:textColor="@color/nmBlack"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/buttonCallResident"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/nmBlack"
                android:text="@string/call_resident"
                android:textAllCaps="false"
                android:textColor="@color/nmLightYellow"
                android:textSize="@dimen/button_default_size"
                android:visibility="gone" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>
