<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".admin.addnotice.activities.AddNoticeActivity">

    <include layout="@layout/activity_base" />

    <TextView
        android:id="@+id/textNoticeTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:text="@string/title"
        android:textColor="@color/nmBlack"
        android:textSize="@dimen/text_view_default_size" />

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="text"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:textColor="@color/nmBlack"
        android:textSize="@dimen/edit_text_default_size"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textNoticeDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:text="@string/description"
        android:textColor="@color/nmBlack"
        android:textSize="@dimen/text_view_default_size" />


    <EditText
        android:id="@+id/editDescription"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:inputType="textMultiLine"
        android:textColor="@color/nmBlack"
        android:textSize="@dimen/edit_text_default_size"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textSocietyServiceAdminName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:text="@string/admin_name"
        android:textColor="@color/nmBlack"
        android:textSize="@dimen/text_view_default_size" />

    <TextView
        android:id="@+id/textSocietyServiceDesignation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingStart="10dp"
        android:text="@string/designation"
        android:textColor="@color/nmBlack"
        android:textSize="@dimen/text_view_default_size" />

    <Button
        android:id="@+id/buttonAddNotice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_margin"
        android:background="@color/nmBlack"
        android:text="@string/add_notice"
        android:textColor="@color/nmLightYellow"
        android:textSize="@dimen/button_default_size" />

</LinearLayout>