<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textMaintenanceCostDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/maintenanceCostDescription"
        android:textColor="@color/nmBlack"
        android:textSize="@dimen/text_view_default_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:id="@+id/textIndianRupeeSymbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:gravity="end"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:text="@string/indian_rupee_symbol"
            android:textColor="@color/nmBlack"
            android:textSize="@dimen/text_view_default_size"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editMaintenanceCost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:inputType="phone"
            android:maxLength="10"
            android:textColor="@color/nmBlack"
            android:textSize="20sp"
            tools:ignore="LabelFor" />

    </LinearLayout>

    <Button
        android:id="@+id/buttonAddMaintenanceCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@color/nmBlack"
        android:text="@string/add"
        android:textAllCaps="true"
        android:textColor="@color/nmLightYellow"
        android:textSize="@dimen/button_default_size" />

</LinearLayout>
