<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/notificationLayout"
    android:layout_width="match_parent"
    android:layout_height="150dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textNotificationTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textNotificationMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/buttonAccept"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:background="@android:color/white"
                android:text="@string/accept"
                android:textColor="@color/nmDarkBlue"
                android:textSize="14sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/buttonReject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:background="@android:color/white"
                android:text="@string/reject"
                android:textColor="@color/nmDarkBlue"
                android:textSize="14sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>